@@ -21,6 +21,7 @@
 - switches to disable PPM, Rad and Analyze support
 - added VIPS_COUNT_PIXELS(), overcomputation tracking
 - @out_format in vips_system() can contain [options]
+- webpsave_buffer no longer ignores @lossless, thanks aaron42net
 
 24/3/16 started 8.2.4
 - fix nohalo and vsqbs interpolators, thanks Rafael
